fixed some layout issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,34 @@
-.top-10 {
-  float: left;
-  width: 400px;
-
+div#beats {
+  background-color: rgba(168, 224, 15, 0.50);
+  color: #FFF;
 }
 
-.top-10 
+div.top_10 {
+  background-color: rgba(168, 224, 15, 0.50);
+  color: #FFF;
+}
+
+div.top_title {
+  background-color: rgba(168, 224, 15, 0.50);
+  color: #FFF;
+}
+
+div.list {
+  background-color: rgba(168, 224, 15, 0.50);
+  color: #FFF;
+}
+
+div.title {
+  background-color: rgba(168, 224, 15, 0.50); 
+  color: #FFF;
+}
+
+div.artist {
+  background-color: rgba(168, 224, 15, 0.50);
+  color: #FFF; 
+}
+
+div.record_label {
+  background-color: rgba(168, 224, 15, 0.50); 
+  color: #FFF;
+}
